# libcupahof

./: CMakeLists.txt  COPYING.libcupahof  README.md  README.txt  dox.in  generateDoc.cmake
data/: README.txt  train_svm.xml
include/: dotproduct.cuh  pahof.h  parameters.h  utilities.h
src/: CMakeLists.txt  CMakeLists.txt~  dotproduct.cu  pahof.cpp  utilities.cpp
tests/: CMakeLists.txt  CMakeLists.txt~  demo.cpp
